--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
             incessant rage.
         
         </p>
+        <h6>
+            Site created by: Arman Antonyan
+        </h6>
     </body>
 </html>
