--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         </h1>
         <p>
             George is currently 3 team kills away from
-            incessant rage.
-        
+            incessant rage. 
+            <img src="realpictureofgeorge.jpg">
         </p>
         <h6>
             Site created by: Arman Antonyan
