--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             incessant rage. 
         </p>
         <p>
-            <img src="https://github.com/GeorgeDefcon/rage_status/blob/master/realpictureofgeorge.jpg">
+            <img src="https://lh3.googleusercontent.com/proxy/Z4CGzY0F-kELVSFH8JQP08AQdFDQLpivcQ7Og9-rINViRdR3do_6E2ksX8q7mNJQKfm0fldYcV3d77yNmoni8supbCdUgmupbGnbVbyGRylCk-rFZo5qUz6AbVR_DsXB3L9SAAUS4qYNYAnNnr8wneE3_QrTszLLpY8">
         </p>
         
         <h6>
