--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
             Is George currently asshurt?
         </h1>
         <p>
-            George is currently 6 team kills away from
+            George is currently 3 team kills away from
             incessant rage. 
+        </p>
+        <p>
+            <img src="https://lh3.googleusercontent.com/proxy/Z4CGzY0F-kELVSFH8JQP08AQdFDQLpivcQ7Og9-rINViRdR3do_6E2ksX8q7mNJQKfm0fldYcV3d77yNmoni8supbCdUgmupbGnbVbyGRylCk-rFZo5qUz6AbVR_DsXB3L9SAAUS4qYNYAnNnr8wneE3_QrTszLLpY8">
         </p>
         
         <h6>
