--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             incessant rage. 
         </p>
         <p>
-            <img src= "https://i.imgur.com/8qw2Isk.jpg">
+            <img src= "https://i.imgur.com/8qw2Isk.jpg" width = "500">
         </p>
         
         <h6>
