--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             incessant rage. 
         </p>
         <p>
-            <img src= "https://i.imgur.com/8qw2Isk.jpg" width = "200">
+            <img src= "https://i.imgur.com/nKvOOgh.gif" width = "200">
         </p>
         <h6>
             Site created by: Arman Antonyan
