--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
             Is George currently asshurt?
         </h1>
         <p>
-            George is currently 3 team kills away from
-            incessant rage. 
+            AHHHHHHHHHHHHHHHHHHH 
         </p>
         <p>
             <img src= "https://i.imgur.com/nKvOOgh.gif" width = "200">
