--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
             Is George currently asshurt?
         </h1>
         <p>
-            AHHHHHHHHHHHHHHHHHHH 
+            No. 
         </p>
+        
         <p>
-            <img src= "https://i.imgur.com/nKvOOgh.gif" width = "200">
+            <img src= "https://i.imgur.com/UlkHDwN.png" width = "200">
         </p>
+        <h2>Number of times George has had sex: 0</h2>
+        <h2>Projected number of times George will have sex in the near future: 0</h2>
+        <h2>Daily George masturbation count: 4</h2>
         <h6>
             Site created by: Arman Antonyan
         </h6>
