--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <p>
             <img src= "https://i.imgur.com/UlkHDwN.png" width = "200">
         </p>
+        <h2>George's smegma jar progress:</h2>
+        <p>
+            <img src = "https://i.imgur.com/en0enxU.jpg" width = "200">
+        </p>
         <h2>Number of times George has had sex: 0</h2>
         <h2>Projected number of times George will have sex in the near future: 0</h2>
         <h2>Daily George masturbation count: 4</h2>
